RESOLVED FIXED163786
Fix minor style issue in the signature of StaticRange::create
https://bugs.webkit.org/show_bug.cgi?id=163786
Summary Fix minor style issue in the signature of StaticRange::create
Wenson Hsieh
Reported 2016-10-21 09:01:44 PDT
This should have just been Ref<Node>&&.
Attachments
Patch (1.61 KB, patch)
2016-10-21 09:03 PDT, Wenson Hsieh
no flags
Patch (1.61 KB, patch)
2016-10-21 09:06 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-10-21 09:03:16 PDT
Wenson Hsieh
Comment 2 2016-10-21 09:06:43 PDT
WebKit Commit Bot
Comment 3 2016-10-21 10:11:05 PDT
Comment on attachment 292353 [details] Patch Clearing flags on attachment: 292353 Committed r207680: <http://trac.webkit.org/changeset/207680>
WebKit Commit Bot
Comment 4 2016-10-21 10:11:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.