Fix minor style issue in the signature of StaticRange::create https://bugs.webkit.org/show_bug.cgi?id=163786 <rdar://problem/28853079>

Reviewed by Alex Christensen.

Change `Ref<WebCore::Node> &&` to `Ref<Node>&&`.

* dom/StaticRange.cpp:
(WebCore::StaticRange::create):


Canonical link: https://commits.webkit.org/181559@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207680 268f45cc-cd09-0410-ab3c-d52691b4dbfc