Source/WebCore/dom/StaticRange.cpp
@@ -39,7 +39,7 @@ StaticRange::StaticRange(Ref<Node>&& startContainer, unsigned startOffset, Ref<N
 {
 }
 
-Ref<StaticRange> StaticRange::create(Ref<WebCore::Node> &&startContainer, unsigned startOffset, Ref<WebCore::Node> &&endContainer, unsigned endOffset)
+Ref<StaticRange> StaticRange::create(Ref<Node>&& startContainer, unsigned startOffset, Ref<Node>&& endContainer, unsigned endOffset)
 {
     return adoptRef(*new StaticRange(WTFMove(startContainer), startOffset, WTFMove(endContainer), endOffset));
 }
